fix: align elements center

--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,12 @@ body {
   display: block;
   font-family: Arial;
   padding: 60px;
-  text-align: justify;
+
+  margin: 0 auto;
 }
 
 .contacts {
-  display: block;
+  text-align: center;
   margin: 0 auto;
 }
 
@@ -17,7 +18,7 @@ body {
   padding-top: 20px;
   padding-bottom: 20px;
   clear: both;
-  margin-left: 4px;
+  margin: 0 auto;
 }
 
 footer {
@@ -27,11 +28,18 @@ footer {
 
 header {
   text-align: center;
+  margin: 0 auto;
 }
 img {
   display: block;
-  margin-right: auto;
-  margin-left: auto;
+  margin: 0 auto;
   width: 150px;
   height: 150px;
+}
+
+ul {
+  margin: 0 auto;
+}
+li {
+  margin: 0 auto;
 }
